# rust-derive-di

./: Cargo.toml  LICENSE-APACHE  README.md
derive_di/: Cargo.toml  README.md
derive_di/src/: lib.rs
derive_di_core/: Cargo.toml  README.md
derive_di_core/src/: injectable.rs  lib.rs
derive_di_macro/: Cargo.toml  README.md
derive_di_macro/src/: lib.rs
