[package]
name = "derive_di"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "This crate is realized the dependency injection pattern"
keywords = ["proc_macro", "procmacro", "derive", "dependency injection", "di", "container", "inject", "pattern"]

[dependencies]
derive_di_macro = { version = "0.2", path = "../derive_di_macro" }
derive_di_core = { version = "0.1", path = "../derive_di_core" }