[package]
name = "derive_di"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "This crate is realized the dependency injection pattern"
keywords = ["proc_macro", "procmacro", "derive", "dependency_injection", "di", "container", "inject", "pattern"]
categories = ["development-tools", "rust-patterns"]
repository = "https://github.com/Mnwa/derive_di"
documentation = "https://docs.rs/derive_di"
license = "Apache-2.0/MIT"

[dependencies]
derive_di_macro = { version = "0.2", path = "../derive_di_macro" }
derive_di_core = { version = "0.2", path = "../derive_di_core" }