[package]
name = "derive_di_core"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "This crate give traits for the parent crate derive_di"
keywords = ["dependency injection", "di", "container", "inject"]
license = "Apache-2.0/MIT"
repository = "https://github.com/Mnwa/derive_di"
documentation = "https://docs.rs/derive_di_core"

[dependencies]