[package]
name = "derive_di_macro"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
description = "This macro realized dependency injection pattern"
keywords = ["proc_macro", "procmacro", "derive", "dependency injection", "di", "container", "inject"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
