[package]
name = "derive_di_macro"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
description = "This macro realized dependency injection pattern"
keywords = ["proc_macro", "procmacro", "derive", "dependency_injection", "di"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/Mnwa/derive_di"
documentation = "https://docs.rs/derive_di_macro"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
